...
import StripeAppWrapper from './src/stripe/StripeAppWrapper';
import { AuthProvider, useAuth } from './src/context/AuthContext';
import { CartProvider, useCart } from './src/context/CartContext';
import { ConfigProvider } from './src/context/ConfigContext';
import { FavoritesProvider } from './src/context/FavoritesContext';
import { ViewCartBar } from './src/components/ViewCartBar';
import Login from './src/screens/Login';
import Register from './src/screens/Register';
import Home from './src/screens/Home';
import RestaurantDetail from './src/screens/RestaurantDetail';
import Cart from './src/screens/Cart';
import Orders from './src/screens/Orders';
import OrderDetail from './src/screens/OrderDetail';
import Profile from './src/screens/Profile';
import { Ionicons } from '@expo/vector-icons';
import { brand } from './src/theme';

...
